fix(fp-1678): manage team list wrap height change
This value makes modals height match but only at specific window height.

Setting height of modals is better but led me to change too much code.

Instead, a TACC Modal component could handle height from prop.

--- a/client/src/components/Allocations/AllocationsModals/AllocationsManageTeamTable/AllocationsManageTeamTable.module.scss
+++ b/client/src/components/Allocations/AllocationsModals/AllocationsManageTeamTable/AllocationsManageTeamTable.module.scss
@@ -1,5 +1,5 @@
 .listing-wrapper {
-  height: 34.5vh;
+  height: 33.5vh;
   overflow-y: auto;
   padding-left: 0;
   padding-right: 0;
